# rustle-tui

./: Architecture.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: adjectives.txt  main.rs  nouns.txt  password_generator.rs  storage_manager.rs
