[package]
name = "rustle-tui"
version = "1.0.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
blake3 = "1.8.2"
crossterm = "0.29.0"
dirs = "6.0.0"
rand = "0.9.1"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.219", features = ["derive"] }
zxcvbn = "2.0.0"
